fix: layout issues with footer h-scroll

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,18 +8,15 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	width: 100vw;
+
+	background-color: #222528;
 }
 
-.main-content {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
+main {
 	padding-top: 120px;
-	width: 100vw;
-	height: 100vh;
-	flex: 1;
-	background-color: rgba(255, 192, 203, 0.342);
+	min-height: 100vh;
+	max-width: 100vw;
+	padding: 120px 300px 0 300px;
 }
 
 /* *Not responsive for now
